# google-cloud-bigquery-datatransfer-v1

./: .gitignore  README.md  WORKSPACE  repository_rules.bzl  update_java_files.sh
compiled/gapic-google-cloud-bigquery-datatransfer-v1-java/: build.gradle
compiled/gapic-google-cloud-bigquery-datatransfer-v1-java/src/main/java/com/google/cloud/bigquery/datatransfer/v1/: DataSourceServiceClient.java  DataSourceServiceSettings.java  DataTransferServiceClient.java  DataTransferServiceSettings.java  gapic_metadata.json  package-info.java
compiled/gapic-google-cloud-bigquery-datatransfer-v1-java/src/main/java/com/google/cloud/bigquery/datatransfer/v1/stub/: DataSourceServiceStub.java  DataSourceServiceStubSettings.java  DataTransferServiceStub.java  DataTransferServiceStubSettings.java  GrpcDataSourceServiceCallableFactory.java  GrpcDataSourceServiceStub.java  GrpcDataTransferServiceStub.java  HttpJsonDataSourceServiceCallableFactory.java  HttpJsonDataSourceServiceStub.java  HttpJsonDataTransferServiceStub.java
compiled/gapic-google-cloud-bigquery-datatransfer-v1-java/src/test/java/com/google/cloud/bigquery/datatransfer/v1/: DataSourceServiceClientHttpJsonTest.java  DataSourceServiceClientTest.java  DataTransferServiceClientHttpJsonTest.java  DataTransferServiceClientTest.java  MockDataSourceService.java  MockDataSourceServiceImpl.java  MockDataTransferServiceImpl.java
compiled/grpc-google-cloud-bigquery-datatransfer-v1-java/: build.gradle
compiled/grpc-google-cloud-bigquery-datatransfer-v1-java/src/main/java/com/google/cloud/bigquery/datatransfer/v1/: DataSourceServiceGrpc.java  DataTransferServiceGrpc.java
compiled/proto-google-cloud-bigquery-datatransfer-v1-java/: build.gradle
compiled/proto-google-cloud-bigquery-datatransfer-v1-java/src/main/java/com/google/cloud/bigquery/datatransfer/v1/: CheckValidCredsRequest.java  CheckValidCredsRequestOrBuilder.java  CheckValidCredsResponse.java  CheckValidCredsResponseOrBuilder.java  CreateDataSourceDefinitionRequest.java  CreateDataSourceDefinitionRequestOrBuilder.java  CreateTransferConfigRequest.java  CreateTransferConfigRequestOrBuilder.java  DataSource.java  DataSourceDefinition.java  DataSourceDefinitionOrBuilder.java  DataSourceName.java  DataSourceOrBuilder.java  DataSourceParameter.java  DataSourceParameterOrBuilder.java  DataSourceProto.java  DataTransferProto.java  DeleteDataSourceDefinitionRequest.java  DeleteDataSourceDefinitionRequestOrBuilder.java  DeleteTransferConfigRequest.java  DeleteTransferConfigRequestOrBuilder.java  DeleteTransferRunRequest.java  DeleteTransferRunRequestOrBuilder.java  EmailPreferences.java  EmailPreferencesOrBuilder.java  EnableDataTransferServiceRequest.java  EnableDataTransferServiceRequestOrBuilder.java  EncryptionConfiguration.java  EncryptionConfigurationOrBuilder.java  EnrollDataSourcesRequest.java  EnrollDataSourcesRequestOrBuilder.java  EventDrivenSchedule.java  EventDrivenScheduleOrBuilder.java  FinishRunRequest.java  FinishRunRequestOrBuilder.java  GetDataSourceDefinitionRequest.java  GetDataSourceDefinitionRequestOrBuilder.java  GetDataSourceRequest.java  GetDataSourceRequestOrBuilder.java  GetTransferConfigRequest.java  (+72 more)
gapic/metadata/: BUILD.bazel
google/api/: BUILD.bazel
google/cloud/: BUILD.bazel
google/cloud/bigquery/datatransfer/: BUILD.bazel
google/cloud/bigquery/datatransfer/v1/: BUILD.bazel  datasource.proto
google/cloud/location/: BUILD.bazel
google/geo/type/: BUILD.bazel
google/longrunning/: BUILD.bazel
google/rpc/: BUILD.bazel
google/rpc/context/: BUILD.bazel
google/type/: BUILD.bazel
