##############################################################################
# Common
##############################################################################
load("@com_google_googleapis_imports//:imports.bzl", "java_gapic_assembly_gradle_pkg", "java_grpc_library", "java_proto_library", "proto_library_with_info")
load("@rules_proto//proto:defs.bzl", "proto_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

proto_library(
    name = "operations_proto",
    srcs = ["operations.proto"],
    deps = [
        "//google/api:annotations_proto",
        "//google/api:client_proto",
        "//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library_with_info(
    name = "longrunning_proto_with_info",
    deps = [":operations_proto"],
)

java_proto_library(
    name = "longrunning_java_proto",
    deps = [":operations_proto"],
)

java_grpc_library(
    name = "longrunning_java_grpc",
    srcs = [":operations_proto"],
    deps = [":longrunning_java_proto"],
)

# Please DO-NOT-REMOVE this section.
# This is required to generate java files for these protos.
# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-longrunning-java",
    transport = "grpc+rest",
    deps = [
        ":longrunning_java_grpc",
        ":longrunning_java_proto",
        ":operations_proto",
    ],
)
