##############################################################################
# Java
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "java_gapic_assembly_gradle_pkg",
    "java_proto_library",
)
load("@rules_proto//proto:defs.bzl", "proto_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "calendar_period_proto",
    srcs = ["calendar_period.proto"],
)

proto_library(
    name = "color_proto",
    srcs = ["color.proto"],
    deps = [
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "date_proto",
    srcs = ["date.proto"],
)

proto_library(
    name = "datetime_proto",
    srcs = ["datetime.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "dayofweek_proto",
    srcs = ["dayofweek.proto"],
)

proto_library(
    name = "decimal_proto",
    srcs = ["decimal.proto"],
)

proto_library(
    name = "expr_proto",
    srcs = ["expr.proto"],
)

proto_library(
    name = "fraction_proto",
    srcs = ["fraction.proto"],
)

proto_library(
    name = "interval_proto",
    srcs = ["interval.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "latlng_proto",
    srcs = ["latlng.proto"],
)

proto_library(
    name = "localized_text_proto",
    srcs = ["localized_text.proto"],
)

proto_library(
    name = "money_proto",
    srcs = ["money.proto"],
)

proto_library(
    name = "month_proto",
    srcs = ["month.proto"],
)

proto_library(
    name = "phone_number_proto",
    srcs = ["phone_number.proto"],
)

proto_library(
    name = "postal_address_proto",
    srcs = ["postal_address.proto"],
)

proto_library(
    name = "quaternion_proto",
    srcs = ["quaternion.proto"],
)

proto_library(
    name = "timeofday_proto",
    srcs = ["timeofday.proto"],
)

java_proto_library(
    name = "type_java_proto",
    deps = [
        ":calendar_period_proto",
        ":color_proto",
        ":date_proto",
        ":datetime_proto",
        ":dayofweek_proto",
        ":decimal_proto",
        ":expr_proto",
        ":fraction_proto",
        ":interval_proto",
        ":latlng_proto",
        ":localized_text_proto",
        ":money_proto",
        ":month_proto",
        ":phone_number_proto",
        ":postal_address_proto",
        ":quaternion_proto",
        ":timeofday_proto",
    ],
)

# Please DO-NOT-REMOVE this section.
# This is required to generate java files for these protos.
# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-type-java",
    transport = "grpc+rest",
    deps = [
        ":calendar_period_proto",
        ":color_proto",
        ":date_proto",
        ":datetime_proto",
        ":dayofweek_proto",
        ":decimal_proto",
        ":expr_proto",
        ":fraction_proto",
        ":interval_proto",
        ":latlng_proto",
        ":localized_text_proto",
        ":money_proto",
        ":month_proto",
        ":phone_number_proto",
        ":postal_address_proto",
        ":quaternion_proto",
        ":timeofday_proto",
        ":type_java_proto",
    ],
)
