load(
    "@com_google_googleapis_imports//:imports.bzl",
    "java_gapic_assembly_gradle_pkg",
    "java_proto_library",
)
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "viewport_proto",
    srcs = ["viewport.proto"],
    deps = ["//google/type:latlng_proto"],
)

##############################################################################
# Java
##############################################################################
java_proto_library(
    name = "viewport_java_proto",
    deps = [
        ":viewport_proto",
    ],
)

# Please DO-NOT-REMOVE this section.
# This is required to generate java files for these protos.
# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-geo-type-java",
    transport = "grpc+rest",
    deps = [
        ":viewport_java_proto",
        ":viewport_proto",
    ],
)
